<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:background="@color/colorGrey_300"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="np.com.rahulrajbanshi.githubprofileviewer.MainActivity">


    <TextView
        android:id="@+id/labelEtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTvUserName" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/etUserNameHint"
        android:maxLines="1"
        android:minLines="1"
        android:lines="1"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center"
        android:text="@string/submit" />

</LinearLayout>
